--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_fragment"
     android:layout_width="match_parent"
@@ -8,24 +8,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="jrl.deint.staticfragment.Fragment_Activity">
+    tools:context="jrl.deint.dynamicfragment.Fragment_Activity">
 
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="jrl.deint.staticfragment.FragmentA"
-        android:id="@+id/fragment_a"
-        tools:layout="@layout/fragment_a"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="jrl.deint.staticfragment.FragmentB"
-        android:id="@+id/fragment_b"
-        tools:layout="@layout/fragment_b"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-</RelativeLayout>
+</FrameLayout>
